--- a/ReactiveReader/ReactiveReader.UWP/Views/ArticleView.xaml
+++ b/ReactiveReader/ReactiveReader.UWP/Views/ArticleView.xaml
@@ -5,7 +5,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    xmlns:designTime="using:ReactiveReader.Core.ViewModels.DesignTime"
+    d:DataContext="{d:DesignInstance designTime:DesignTimeArticleViewModel, IsDesignTimeCreatable=True}">
 
     <RelativePanel>
         <TextBlock x:Name="Title"
@@ -14,7 +16,7 @@
                    Text="{x:Bind BindingRoot.Title, Mode=OneTime}"
                    RelativePanel.AlignTopWithPanel="True"
                    RelativePanel.AlignLeftWithPanel="True" />
-        
+
         <TextBlock x:Name="PublishDate"
                    Margin="8,8,0,0"
                    TextWrapping="Wrap"
